                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2013-05-25
 * Added Wing Command, the new CLI for Wing.
 * Converted wing_db.pl to Wing Command.
 * Converted wing_add_user.pl to Wing Command.
 * Added listing of admins via Wing Command.
 * Added modifying users via Wing Command.
 * Add wing do to Wing Command, for firing off Wingman jobs.

2013-05-19
 * Added EmailAllAdmins Wingman plugin.
 * WARNING: By this point all Wing apps should have a block similar 
	to this added to their config files if they want to start
	using Wingman services.

    "wingman" : {
        "max_workers" : 2,
        "beanstalkd" : {
           "server" : "127.0.0.1",
           "ttr" : 60,
           "default_tube" : "wingman",
        },
        "plugins" : {
           "Wing::Wingman::SendTemplatedEmail" : {
                "phase" : "SendTemplatedEmail",
           },
           "Wing::Wingman::EmailAllAdmins" : {
                "phase" : "EmailAllAdmins",
           },
        }
    },

2013-05-18
 * Added SendTemplatedEmail Wingman plugin.
 * Added generic.mkit
 * Added reset_password.mkit

2013-05-16
 * Added Wingman manager rest and web interfaces.

2013-05-14
 * Restructured Wingman and added more documentation for it.

2013-05-12
 * Added the Wingman job server.
