@@ -11,6 +11,7 @@ with respect to new features and compatibility changes.
  * Added listing of admins via Wing Command.
  * Added modifying users via Wing Command.
  * Add wing do to Wing Command, for firing off Wingman jobs.
+ * Converted wing_add_class.pl and wing_template_class.pl to Wing Command.
 
 2013-05-19
  * Added EmailAllAdmins Wingman plugin.
